maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:31: error: not found: value pickUpBaggle
  pickUpBaggle()
  ^